--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,6 +44,5 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#FFFFFF",
-  "theme_color": "#5683BA"
+  "background_color": "#FFFFFF"
 }
