--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "core-js": "^3.1.3",
+    "dexie": "^2.0.4",
     "firebase": "^6.0.4",
     "is_js": "^0.9.0",
     "lodash": "^4.17.11",
