--- a/firebase.json
+++ b/firebase.json
@@ -1,48 +1,39 @@
 {
-  "firestore": {
-    "rules": "./src/firebase/firestore.rules"
-  },
   "hosting": {
-    "headers": [
-      {
+    "headers": [{
         "source": "/service-worker.js",
-        "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "no-cache"
+        }]
       },
       {
         "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "*"
-          }
-        ]
+        "headers": [{
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }]
       },
       {
         "source": "**/*.@(jpg|jpeg|gif|png|svg)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "max-age=604800"
-          }
-        ]
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=604800"
+        }]
       },
       {
         "source": "404.html",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "max-age=300"
-          }
-        ]
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=300"
+        }]
       }
     ],
     "public": "dist/",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
   }
 }
