--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
-    "firebase": "^6.0.4",
     "is_js": "^0.9.0",
     "lodash": "^4.17.11",
     "onsenui": "^2.10.8",
@@ -30,6 +29,7 @@
     "vue": "^2.6.10",
     "vue-head": "^2.1.1",
     "vue-onsenui": "^2.6.2",
+    "vue-router": "^3.0.6",
     "vue-web-cam": "^1.5.0",
     "vuex": "^3.1.1"
   },
