--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-onsenui": "^2.6.2",
     "vue-router": "^3.0.6",
     "vue-web-cam": "^1.5.0",
+    "vue2-google-maps": "^0.10.6",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
