--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
+    "html-loader": "0.5.5",
     "is_js": "^0.9.0",
     "lodash": "^4.17.11",
     "onsenui": "^2.10.8",
