--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
             cat \<<EOF > .env.local
             VUE_APP_INAT_BASE_URL=$INAT_BASE_URL
             VUE_APP_INAT_STATIC_BASE_URL=$INAT_STATIC_BASE_URL
-            VUE_APP_API_URL_BASE=$API_URL_BASE
+            VUE_APP_API_BASE_URL=$API_BASE_URL
             VUE_APP_OAUTH_APP_ID=$OAUTH_APP_ID
             VUE_APP_OAUTH_REDIRECT_URI=$OAUTH_REDIRECT_URI
             VUE_APP_INAT_PROJECT_SLUG=wild-orchid-watch-australia
