--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
     "is_js": "^0.9.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "onsenui": "^2.10.8",
     "pkce-challenge": "^1.0.3",
