--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
             VUE_APP_API_BASE_URL=$API_BASE_URL
             VUE_APP_OAUTH_APP_ID=$OAUTH_APP_ID
             VUE_APP_OAUTH_REDIRECT_URI=$OAUTH_REDIRECT_URI
-            VUE_APP_INAT_PROJECT_SLUG=wild-orchid-watch-australia
+            VUE_APP_INAT_PROJECT_SLUG=$INAT_PROJECT_SLUG
             VUE_APP_DEPLOYED_ENV_IS_PROD=false
             EOF
             echo '[INFO] contents of .env.local'
