--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VUE_APP_OAUTH_APP_ID=7654a3c9152c6c1afaf215c9fa066a73a963230b37e6104021ca9b52398
 VUE_APP_OAUTH_REDIRECT_URI=https://app.wildorchidwatch.org/oauth-callback
 VUE_APP_INAT_PROJECT_SLUG=wild-orchid-watch-australia
 VUE_APP_DEPLOYED_ENV_IS_PROD=false
+VUE_APP_GMAPS_API_KEY=TODOgetYourselfAKeyFromTheGoogleCloudConsole
