--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "vue-onsenui": "^2.6.2",
     "vue-router": "3.0.7",
     "vue2-google-maps": "0.10.7",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.132",
