--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "node": ">=8.16.0"
   },
   "dependencies": {
+    "@sentry/browser": "^5.5.0",
+    "@sentry/integrations": "^5.5.0",
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
     "is_js": "^0.9.0",
