feat: add config to store obs field IDs so we can set defaults and hide the two fields that are conditional on orchid type === epiphyte, rename Individual to Single Species as it can handle individuals and populations

--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@ VUE_APP_INAT_PROJECT_SLUG=wild-orchid-watch-australia-dev
 VUE_APP_DEPLOYED_ENV_IS_PROD=false
 VUE_APP_GMAPS_API_KEY=TODOgetYourselfAKeyFromTheGoogleCloudConsole
 VUE_APP_SENTRY_DSN=https://replace-me-with-your-key@sentry.io/<project-id>
+VUE_APP_OBS_FIELD_ID_ACCURACY=18
+#VUE_APP_OBS_FIELD_DEFAULT_ACCURACY # use default
+VUE_APP_OBS_FIELD_ID_COUNT=20
+VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=1
+#VUE_APP_OBS_FIELD_DEFAULT_ORCHID_TYPE # use default
+VUE_APP_OBS_FIELD_ID_HOST_TREE=9
+VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=10
+#VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE # use default
