--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
     "sass": "^1.21.0",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-head": "^2.1.1",
     "vue-onsenui": "^2.6.2",
