--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
-  "hosting": {
+  "hosting": [{
+    "target": "dev",
     "headers": [{
         "source": "/service-worker.js",
         "headers": [{
@@ -35,5 +36,42 @@
       "source": "**",
       "destination": "/index.html"
     }]
-  }
+  }, {
+    "target": "prod",
+    "headers": [{
+        "source": "/service-worker.js",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "no-cache"
+        }]
+      },
+      {
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers": [{
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }]
+      },
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png|svg)",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=604800"
+        }]
+      },
+      {
+        "source": "404.html",
+        "headers": [{
+          "key": "Cache-Control",
+          "value": "max-age=300"
+        }]
+      }
+    ],
+    "public": "dist/",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
+  }]
 }
