--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:unit": "vue-cli-service test:unit",
     "prettier:format-all": "prettier --write \"**/*.{vue,scss,sass,js}\"",
     "prettier:check": "prettier \"**/*.{vue,scss,sass,js}\" --list-different",
-    "firebase:deploy:ci": "firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:"
+    "firebase:deploy:ci": "doit() { firebase --non-interactive --token ${FIREBASE_TOKEN:?} deploy --only hosting:${1:?}; }; doit"
   },
   "engines": {
     "npm": ">=5.5.0",
