--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ VUE_APP_OAUTH_REDIRECT_URI=http://localhost:8080/oauth-callback
 VUE_APP_INAT_PROJECT_SLUG=wild-orchid-watch-australia-dev
 VUE_APP_DEPLOYED_ENV_IS_PROD=false
 VUE_APP_GMAPS_API_KEY=TODOgetYourselfAKeyFromTheGoogleCloudConsole
+VUE_APP_GA_CODE=off
 VUE_APP_SENTRY_DSN=https://replace-me-with-your-key@sentry.io/<project-id>
 VUE_APP_OBS_FIELD_ID_ACCURACY=18
 #VUE_APP_OBS_FIELD_DEFAULT_ACCURACY # use default
