--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "node": ">=8.16.0"
   },
   "dependencies": {
-    "@sentry/browser": "^5.5.0",
-    "@sentry/integrations": "^5.5.0",
+    "@sentry/browser": "^5.6.2",
+    "@sentry/integrations": "^5.6.1",
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
     "is_js": "^0.9.0",
@@ -32,6 +32,7 @@
     "sass": "^1.21.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.17.2",
     "vue-head": "^2.1.1",
     "vue-onsenui": "^2.6.2",
     "vue-router": "3.0.7",
