--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "@sentry/browser": "^5.6.2",
     "@sentry/integrations": "^5.6.1",
+    "browser-image-compression": "1.0.6",
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
+    "exif-js": "2.3.0",
     "is_js": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
