feat: add smooth autoscroll when an autocomplete gets focus so the suggested items are visible below it

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
     "sass": "^1.21.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-analytics": "^5.17.2",
