feat: change approx area searched to use square numbers, add logic for pretty display of obs field values

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,7 @@ jobs:
             VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${PROD_OBS_FIELD_ID_ORCHID_TYPE:?}
             VUE_APP_OBS_FIELD_ID_HOST_TREE=${PROD_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${PROD_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
+            VUE_APP_OBS_FIELD_AREA_SEARCHED=${PROD_OBS_FIELD_AREA_SEARCHED:?}
             VUE_APP_GA_CODE=${PROD_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=production
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -142,6 +143,7 @@ jobs:
             VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${BETA_OBS_FIELD_ID_ORCHID_TYPE:?}
             VUE_APP_OBS_FIELD_ID_HOST_TREE=${BETA_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${BETA_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
+            VUE_APP_OBS_FIELD_AREA_SEARCHED=${BETA_OBS_FIELD_AREA_SEARCHED:?}
             VUE_APP_GA_CODE=${BETA_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=beta
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -191,6 +193,7 @@ jobs:
             VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${DEV_OBS_FIELD_ID_ORCHID_TYPE:?}
             VUE_APP_OBS_FIELD_ID_HOST_TREE=${DEV_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${DEV_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
+            VUE_APP_OBS_FIELD_AREA_SEARCHED=${DEV_OBS_FIELD_AREA_SEARCHED:?}
             VUE_APP_GA_CODE=${DEV_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=development
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
