--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=1
 VUE_APP_OBS_FIELD_ID_HOST_TREE=9
 VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=10
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE # use default
+VUE_APP_OBS_FIELD_AREA_SEARCHED=21
