--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && rollup -c && workbox injectManifest",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
@@ -25,8 +25,10 @@
     "core-js": "^3.1.3",
     "dexie": "^2.0.4",
     "exif-js": "2.3.0",
+    "fetch-retry": "^2.2.3",
     "is_js": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "onsenui": "^2.10.9",
@@ -69,10 +71,17 @@
     "eslint-plugin-vue": "^5.2.2",
     "favicons-webpack-plugin": "^1.0.1",
     "firebase-tools": "^6.10.0",
+    "rollup": "^1.27.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "workbox-background-sync": "^4.3.1",
+    "workbox-cli": "^4.3.1",
+    "workbox-routing": "^4.3.1",
+    "workbox-strategies": "^4.3.1"
   },
   "postcss": {
     "plugins": {
