--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && rollup -c && workbox injectManifest",
+    "build:watch": "NODE_END=development nodemon --ext vue,js,mjs,json --watch src --watch sw-src --watch package.json --exec bash -c 'yarn build && servor dist/ index.html --no-browser'",
+    "build:serve": "NODE_END=development yarn build && servor dist/ index.html --no-browser",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
@@ -23,7 +25,6 @@
     "@sentry/integrations": "^5.6.1",
     "browser-image-compression": "1.0.6",
     "core-js": "^3.1.3",
-    "dexie": "^2.0.4",
     "exif-js": "2.3.0",
     "fetch-retry": "^2.2.3",
     "is_js": "^0.9.0",
@@ -71,10 +72,12 @@
     "eslint-plugin-vue": "^5.2.2",
     "favicons-webpack-plugin": "^1.0.1",
     "firebase-tools": "^6.10.0",
+    "nodemon": "^2.0.0",
     "rollup": "^1.27.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "sass-loader": "^7.1.0",
+    "servor": "^2.2.1",
     "vue-template-compiler": "^2.6.10",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-merge": "^4.2.1",
