--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.2",
+    "fake-indexeddb": "^3.0.0",
     "favicons-webpack-plugin": "^1.0.1",
     "firebase-tools": "^6.10.0",
     "nodemon": "^2.0.0",
@@ -121,6 +122,9 @@
       "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
     ],
     "testURL": "http://localhost/",
+    "setupFiles": [
+      "fake-indexeddb/auto"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/tests/unit/setup.js"
     ],
