--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,12 +88,17 @@ jobs:
             VUE_APP_OAUTH_REDIRECT_URI=${PROD_OAUTH_REDIRECT_URI:?}
             VUE_APP_INAT_PROJECT_SLUG=${PROD_INAT_PROJECT_SLUG:?}
             VUE_APP_TARGET_TAXA_ID=${PROD_TARGET_TAXA_ID:?}
-            VUE_APP_OBS_FIELD_ID_ACCURACY=${PROD_OBS_FIELD_ID_ACCURACY:?}
+            VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${PROD_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=${PROD_OBS_FIELD_ID_AREA_OF_EXACT_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${PROD_OBS_FIELD_ID_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=${PROD_OBS_FIELD_ID_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${PROD_OBS_FIELD_ID_COUNT:?}
-            VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${PROD_OBS_FIELD_ID_ORCHID_TYPE:?}
-            VUE_APP_OBS_FIELD_ID_HOST_TREE=${PROD_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${PROD_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
-            VUE_APP_OBS_FIELD_AREA_SEARCHED=${PROD_OBS_FIELD_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_HOST_TREE=${PROD_OBS_FIELD_ID_HOST_TREE:?}
+            VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE=${PROD_OBS_FIELD_ID_IMMEDIATE_LANDUSE:?}
+            VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${PROD_OBS_FIELD_ID_ORCHID_TYPE:?}
+            VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=${PROD_OBS_FIELD_ID_SOIL_STRUCTURE:?}
+            VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${PROD_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${PROD_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=production
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -106,8 +111,8 @@ jobs:
             [ ! -z $PROD_OBS_FIELD_ORCHID_TYPE_EPIPHYTE ] && {
               echo "VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$PROD_OBS_FIELD_ORCHID_TYPE_EPIPHYTE" >> $theFile
             }
-            echo '[INFO] contents of .env.local'
-            cat .env.local
+            echo "[INFO] contents of $theFile"
+            cat $theFile
       - run:
           name: 'Build prod'
           command: |
@@ -135,12 +140,17 @@ jobs:
             VUE_APP_OAUTH_REDIRECT_URI=${BETA_OAUTH_REDIRECT_URI:?}
             VUE_APP_INAT_PROJECT_SLUG=${BETA_INAT_PROJECT_SLUG:?}
             VUE_APP_TARGET_TAXA_ID=${BETA_TARGET_TAXA_ID:?}
-            VUE_APP_OBS_FIELD_ID_ACCURACY=${BETA_OBS_FIELD_ID_ACCURACY:?}
+            VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${BETA_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=${BETA_OBS_FIELD_ID_AREA_OF_EXACT_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${BETA_OBS_FIELD_ID_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=${BETA_OBS_FIELD_ID_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${BETA_OBS_FIELD_ID_COUNT:?}
-            VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${BETA_OBS_FIELD_ID_ORCHID_TYPE:?}
-            VUE_APP_OBS_FIELD_ID_HOST_TREE=${BETA_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${BETA_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
-            VUE_APP_OBS_FIELD_AREA_SEARCHED=${BETA_OBS_FIELD_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_HOST_TREE=${BETA_OBS_FIELD_ID_HOST_TREE:?}
+            VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE=${BETA_OBS_FIELD_ID_IMMEDIATE_LANDUSE:?}
+            VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${BETA_OBS_FIELD_ID_ORCHID_TYPE:?}
+            VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=${BETA_OBS_FIELD_ID_SOIL_STRUCTURE:?}
+            VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${BETA_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${BETA_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=beta
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -153,8 +163,8 @@ jobs:
             [ ! -z $BETA_OBS_FIELD_ORCHID_TYPE_EPIPHYTE ] && {
               echo "VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$BETA_OBS_FIELD_ORCHID_TYPE_EPIPHYTE" >> $theFile
             }
-            echo '[INFO] contents of .env.local'
-            cat .env.local
+            echo "[INFO] contents of $theFile"
+            cat $theFile
       - run:
           name: 'Build beta'
           command: |
@@ -182,12 +192,17 @@ jobs:
             VUE_APP_OAUTH_REDIRECT_URI=${DEV_OAUTH_REDIRECT_URI:?}
             VUE_APP_INAT_PROJECT_SLUG=${DEV_INAT_PROJECT_SLUG:?}
             VUE_APP_TARGET_TAXA_ID=${DEV_TARGET_TAXA_ID:?}
-            VUE_APP_OBS_FIELD_ID_ACCURACY=${DEV_OBS_FIELD_ID_ACCURACY:?}
+            VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${DEV_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=${DEV_OBS_FIELD_ID_AREA_OF_EXACT_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${DEV_OBS_FIELD_ID_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=${DEV_OBS_FIELD_ID_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${DEV_OBS_FIELD_ID_COUNT:?}
-            VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${DEV_OBS_FIELD_ID_ORCHID_TYPE:?}
-            VUE_APP_OBS_FIELD_ID_HOST_TREE=${DEV_OBS_FIELD_ID_HOST_TREE:?}
             VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=${DEV_OBS_FIELD_ID_EPIPHYTE_HEIGHT:?}
-            VUE_APP_OBS_FIELD_AREA_SEARCHED=${DEV_OBS_FIELD_AREA_SEARCHED:?}
+            VUE_APP_OBS_FIELD_ID_HOST_TREE=${DEV_OBS_FIELD_ID_HOST_TREE:?}
+            VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE=${DEV_OBS_FIELD_ID_IMMEDIATE_LANDUSE:?}
+            VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=${DEV_OBS_FIELD_ID_ORCHID_TYPE:?}
+            VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=${DEV_OBS_FIELD_ID_SOIL_STRUCTURE:?}
+            VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=${DEV_OBS_FIELD_ID_WIDER_LANDUSE:?}
             VUE_APP_GA_CODE=${DEV_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=development
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -200,8 +215,8 @@ jobs:
             [ ! -z $DEV_OBS_FIELD_ORCHID_TYPE_EPIPHYTE ] && {
               echo "VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE=$DEV_OBS_FIELD_ORCHID_TYPE_EPIPHYTE" >> $theFile
             }
-            echo '[INFO] contents of .env.local'
-            cat .env.local
+            echo "[INFO] contents of $theFile"
+            cat $theFile
       - run:
           name: 'Build dev'
           command: |
