feat: WOW-167 change to a 'multivalued' question for Phenology, share constants between obs field script and main code (not foolproof but shows intention), adjust obs field values now 'preferred' is considered optional

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
             VUE_APP_TARGET_TAXA_ID=${PROD_TARGET_TAXA_ID:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${PROD_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=${PROD_OBS_FIELD_ID_AREA_OF_EXACT_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${PROD_OBS_FIELD_ID_AREA_OF_POPULATION:?}
             VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${PROD_OBS_FIELD_ID_AREA_SEARCHED:?}
             VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=${PROD_OBS_FIELD_ID_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${PROD_OBS_FIELD_ID_COUNT:?}
@@ -142,6 +143,7 @@ jobs:
             VUE_APP_TARGET_TAXA_ID=${BETA_TARGET_TAXA_ID:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${BETA_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=${BETA_OBS_FIELD_ID_AREA_OF_EXACT_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${BETA_OBS_FIELD_ID_AREA_OF_POPULATION:?}
             VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${BETA_OBS_FIELD_ID_AREA_SEARCHED:?}
             VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=${BETA_OBS_FIELD_ID_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${BETA_OBS_FIELD_ID_COUNT:?}
@@ -194,6 +196,7 @@ jobs:
             VUE_APP_TARGET_TAXA_ID=${DEV_TARGET_TAXA_ID:?}
             VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=${DEV_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT:?}
             VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=${DEV_OBS_FIELD_ID_AREA_OF_EXACT_COUNT:?}
+            VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=${DEV_OBS_FIELD_ID_AREA_OF_POPULATION:?}
             VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=${DEV_OBS_FIELD_ID_AREA_SEARCHED:?}
             VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=${DEV_OBS_FIELD_ID_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_ID_COUNT=${DEV_OBS_FIELD_ID_COUNT:?}
