--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ VUE_APP_GA_CODE=off
 VUE_APP_SENTRY_DSN=https://replace-me-with-your-key@sentry.io/<project-id>
 VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=51
 VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=52
+VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=54
 VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=49
 VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=48
 VUE_APP_OBS_FIELD_ID_COUNT=53
@@ -19,6 +20,7 @@ VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE=41
 VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=39
 VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=47
 VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=42
+VUE_APP_OBS_FIELD_IDS_PHENOLOGY=63,64,65,66,67,68
 
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE    # use default
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL # use default
