--- a/.env
+++ b/.env
@@ -12,15 +12,17 @@ VUE_APP_OBS_FIELD_ID_ACCURACY_OF_POPULATION_COUNT=51
 VUE_APP_OBS_FIELD_ID_AREA_OF_EXACT_COUNT=52
 VUE_APP_OBS_FIELD_ID_AREA_OF_POPULATION=54
 VUE_APP_OBS_FIELD_ID_AREA_SEARCHED=49
-VUE_APP_OBS_FIELD_ID_COARSE_FRAGMENTS=48
 VUE_APP_OBS_FIELD_ID_COUNT=53
+VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION=69
 VUE_APP_OBS_FIELD_ID_EPIPHYTE_HEIGHT=45
 VUE_APP_OBS_FIELD_ID_HOST_TREE=44
-VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE=41
 VUE_APP_OBS_FIELD_ID_ORCHID_TYPE=39
 VUE_APP_OBS_FIELD_ID_SOIL_STRUCTURE=47
 VUE_APP_OBS_FIELD_ID_WIDER_LANDUSE=42
 VUE_APP_OBS_FIELD_IDS_PHENOLOGY=63,64,65,66,67,68
+VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=75,76,77,78,79,80,81
+VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97
+VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=$VUE_APP_OBS_FIELD_ID_IMMEDIATE_LANDUSE_CONSERVATION,70,71,72,73,74
 
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_EPIPHYTE    # use default
 #VUE_APP_OBS_FIELD_ORCHID_TYPE_TERRESTRIAL # use default
