--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sentry/browser": "^5.6.2",
     "@sentry/integrations": "^5.6.1",
     "browser-image-compression": "https://github.com/tomsaleeba/browser-image-compression#issue-17",
+    "comlink": "4.2.0",
     "core-js": "^3.4.3",
     "exif-js": "2.3.0",
     "fetch-retry": "^2.2.3",
@@ -28,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
+    "ml5": "0.4.3",
     "moment": "^2.24.0",
     "onsenui": "^2.10.9",
     "pkce-challenge": "^2",
@@ -43,7 +45,8 @@
     "vue-router": "3.0.7",
     "vue2-google-maps": "0.10.7",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "worker-plugin": "3.2.0"
   },
   "devDependencies": {
     "@sentry/webpack-plugin": "^1.8.0",
@@ -71,6 +74,7 @@
     "favicons-webpack-plugin": "^1.0.1",
     "firebase-tools": "^6.10.0",
     "nodemon": "^2.0.0",
+    "promise-worker": "2.0.1",
     "rollup": "^1.27.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -82,7 +86,8 @@
     "workbox-background-sync": "^4.3.1",
     "workbox-cli": "^4.3.1",
     "workbox-routing": "^4.3.1",
-    "workbox-strategies": "^4.3.1"
+    "workbox-strategies": "^4.3.1",
+    "worker-loader": "2.0.0"
   },
   "postcss": {
     "plugins": {
