feat: WOW-167 update obs fields from Sal's email including mutually exclusive conditions on multiselects

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=${PROD_OBS_FIELD_IDS_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=${PROD_OBS_FIELD_IDS_EVIDENCE_THREATS:?}
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${PROD_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
+            VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${PROD_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_GA_CODE=${PROD_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=production
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -159,6 +160,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=${BETA_OBS_FIELD_IDS_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=${BETA_OBS_FIELD_IDS_EVIDENCE_THREATS:?}
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${BETA_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
+            VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${BETA_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_GA_CODE=${BETA_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=beta
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
@@ -215,6 +217,7 @@ jobs:
             VUE_APP_OBS_FIELD_IDS_COARSE_FRAGMENTS=${DEV_OBS_FIELD_IDS_COARSE_FRAGMENTS:?}
             VUE_APP_OBS_FIELD_IDS_EVIDENCE_THREATS=${DEV_OBS_FIELD_IDS_EVIDENCE_THREATS:?}
             VUE_APP_OBS_FIELD_IDS_IMMEDIATE_LANDUSE=${DEV_OBS_FIELD_IDS_IMMEDIATE_LANDUSE:?}
+            VUE_APP_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT=${DEV_OBS_FIELD_IDS_MUTUALLY_EXCLUSIVE_MULTISELECT:?}
             VUE_APP_GA_CODE=${DEV_GA_CODE:?}
             VUE_APP_DEPLOYED_ENV_NAME=development
             VUE_APP_GMAPS_API_KEY=${GMAPS_API_KEY:?}
