--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sentry/integrations": "^5.6.1",
     "browser-image-compression": "https://github.com/tomsaleeba/browser-image-compression#issue-17",
     "comlink": "4.2.0",
-    "core-js": "^3.4.3",
+    "core-js": "3.6.4",
     "exif-js": "2.3.0",
     "fetch-retry": "^2.2.3",
     "is_js": "^0.9.0",
